Unified Row Handling - geowave-985